# probabilistic-generative-model

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb
scripts/: check_db.py  daily_ingest.py  fit_model.py  fit_model_jax.py  ingest_2025.py  ingest_leagues.py  ingest_pl.py  init_db.py  quick_eval.py  setup_db.py  test_connections.py
sql/: schema.sql
src/: __init__.py  config.py  constants.py
src/api/: __init__.py  main.py
src/bayesian/: __init__.py  model.py  prediction.py  priors.py
src/dashboard/: __init__.py  app.py
src/dashboard/pages/: 1_Recent_Results.py  2_Model_Health.py
src/data/: __init__.py  client.py  ingestion.py  models.py  quality.py
src/db/: __init__.py  connection.py  init_db.py  repositories.py
src/db/migrations/: README.md
src/decision/: __init__.py  audit.py  engine.py  kelly.py
src/evaluation/: __init__.py  backtesting.py  baselines.py  comparison.py  metrics.py
src/features/: __init__.py  builder.py  elo.py  rolling.py
src/pipeline/: __init__.py  run_daily.py  run_e2e.py
src/utils/: __init__.py  logging.py
tests/: test_api.py  test_bayesian.py  test_config.py  test_decision.py  test_evaluation.py  test_features.py  test_ingestion_idempotent.py  test_models.py  test_pipeline_integration.py  test_quality_checks.py  test_repositories.py
